[webapp] fix layout so times and programs align

--- a/mythtv/html/backend/src/app/guide/components/timebar/timebar.component.css
+++ b/mythtv/html/backend/src/app/guide/components/timebar/timebar.component.css
@@ -5,7 +5,6 @@
 }
 
 .datebox {
-    float: left;
     padding: 5px 8px 4px 7px;
     color: var(--primary-color-text);
     background: linear-gradient(to bottom, var(--surface-800) 1%, var(--surface-500) 90%, var(--surface-200) 99%);
@@ -21,7 +20,6 @@
 }
 
 .segmentbox {
-    float: left;
     width: 25%;
     padding: 5px 8px 4px 7px;
     color: var(--primary-color-text);
